--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
-/package-lock.json
+package-lock.json
 
 # Visual Studio Code
 .vscode/*
