--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "demo",
+  "name": "jett",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "dev:ssr": "ng serve --proxy-config proxy.conf.json",
+    "build:ssr": "ng build && ng run frontend:server",
+    "serve:ssr": "node dist/frontend/server/main.js",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:demo": "node dist/demo/server/server.mjs"
+    "serve:ssr:jett": "node dist/jett/server/server.mjs"
   },
   "prettier": {
     "overrides": [
@@ -21,6 +24,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.2.4",
+    "@angular/cdk": "^20.2.1",
     "@angular/common": "^20.1.0",
     "@angular/compiler": "^20.1.0",
     "@angular/core": "^20.1.0",
@@ -29,8 +34,13 @@
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.4",
-    "express": "^5.1.0",
+    "@tailwindcss/postcss": "^4.1.12",
+    "dotenv": "^17.2.2",
+    "dotenv-webpack": "^8.1.1",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "simplex-noise": "^4.0.3",
+    "tailwindcss": "^4.1.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -38,15 +48,15 @@
     "@angular/build": "^20.1.4",
     "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.1.0",
-    "@types/express": "^5.0.1",
+    "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^20.17.19",
-    "jasmine-core": "~5.8.0",
+    "@types/node": "^24.3.0",
+    "jasmine-core": "^5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "typescript": "^5.9.2"
   }
 }
